--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuejs-datepicker",
+  "name": "vuejs-datepicker-tmp",
   "version": "1.5.3",
   "description": "A simple Vue.js datepicker component. Supports disabling of dates, inline mode, translations",
   "keywords": [
